--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <img class="logo" src="path/to/your/logo.png" alt="Logo">
-  <a class="contact-button" href="mailto:your@email.com">Contact</a>
+  <img class="logo" src="https://i.ibb.co/Hgt3hG8/bowforest-logo.jpg" alt="bowforest-logo">
+  <a class="contact-button" href="mailto:bram@bowforest.com">Contact</a>
 </body>
 </html>
