--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Bowforest</title>
+  <link rel="icon" type="image/png" href="https://i.ibb.co/1nF52kR/bowforest-logo.png">
   <style>
     body {
       background-color: #000;
