--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
       margin: 0;
       font-family: Arial, sans-serif;
     }
+    .logo-container {
+      margin-bottom: 20px; /* Adjust the spacing between the logo and button */
+    }
     .logo {
       width: 600px; /* Adjust the width of your logo as needed */
+      max-width: 100%;
     }
     .contact-button {
       background-color: #fff;
@@ -29,7 +33,9 @@
   </style>
 </head>
 <body>
-  <img class="logo" src="https://raw.githubusercontent.com/BramVanRoelen/bowforest/main/bowforest_logo.jpeg" alt="bowforest-logo">
+  <div class="logo-container">
+    <img class="logo" src="https://raw.githubusercontent.com/BramVanRoelen/bowforest/main/bowforest_logo.jpeg" alt="bowforest-logo">
+  </div>
   <a class="contact-button" href="mailto:bram@bowforest.com">Contact</a>
 </body>
 </html>
